--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,18 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
+    "beautifulsoup4>=4.14.3",
     "click>=8.1.8",
     "cryptography>=46.0.3",
     "fastapi>=0.124.2",
+    "httpx>=0.28.1",
+    "lxml>=6.0.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.0.1",
     "sqlalchemy[asyncio]>=2.0.45",
+    "trafilatura>=2.0.0",
     "uvicorn[standard]>=0.38.0",
 ]
 
@@ -28,7 +32,6 @@ dev = [
     "pip>=25.0.1",
     "ipykernel>=6.29.5",
     "testcontainers>=4.13.3",
-    "httpx>=0.28.1",
 ]
 
 [tool.hatch.metadata]
