--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ AUTH0_AUDIENCE=bookmarks-api
 # AUTH0_CLIENT_ID: Applications -> Your App -> Settings -> Client ID
 AUTH0_CLIENT_ID=your-client-id
 
+# CORS Configuration
+# Comma-separated list of allowed origins for cross-origin requests
+CORS_ORIGINS=http://localhost:5173
+
 # Development Mode
 # DEV_MODE=true   -> Bypasses auth, uses fake dev user (quick local dev)
 # DEV_MODE=false  -> Real Auth0 authentication (test actual login flow)
