Restructure project layout and consolidate configuration
  - Move src/ and tests/ into backend/ directory
  - Consolidate .env files to single root .env.example
  - Update pyproject.toml, alembic.ini, Makefile for new paths
  - Slim down READMEs, point to source files instead of duplicating

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,41 @@
-# Database Configuration
+# =============================================================================
+# Bookmarks Application Configuration
+# Copy this file to .env and update values for your environment.
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Database
+# -----------------------------------------------------------------------------
 POSTGRES_USER=bookmarks
 POSTGRES_PASSWORD=bookmarks
 POSTGRES_DB=bookmarks
 DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5435/${POSTGRES_DB}
 
-# Auth0 Configuration
-# AUTH0_DOMAIN: Applications -> Your App -> Settings -> Domain
+# -----------------------------------------------------------------------------
+# Auth0 (shared between backend and frontend)
+# Get these from: Auth0 Dashboard -> Applications -> Your App -> Settings
+# -----------------------------------------------------------------------------
 AUTH0_DOMAIN=your-tenant.us.auth0.com
-# AUTH0_AUDIENCE: Applications -> APIs -> Your API -> Identifier
 AUTH0_AUDIENCE=bookmarks-api
-# AUTH0_CLIENT_ID: Applications -> Your App -> Settings -> Client ID
 AUTH0_CLIENT_ID=your-client-id
 
-# CORS Configuration
-# Comma-separated list of allowed origins for cross-origin requests
+# -----------------------------------------------------------------------------
+# Backend Settings
+# -----------------------------------------------------------------------------
+# CORS: Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:5173
 
-# Development Mode
-# DEV_MODE=true   -> Bypasses auth, uses fake dev user (quick local dev)
-# DEV_MODE=false  -> Real Auth0 authentication (test actual login flow)
+# Development mode: bypasses auth, uses fake dev user
+# Set to false to test real Auth0 authentication
 DEV_MODE=true
+
+# -----------------------------------------------------------------------------
+# Frontend Settings (VITE_ prefix required for Vite to expose to browser)
+# -----------------------------------------------------------------------------
+VITE_API_URL=http://localhost:8000
+
+# Frontend Auth0: Leave empty for dev mode (no authentication required)
+# Set these to enable Auth0 authentication in the frontend
+VITE_AUTH0_DOMAIN=
+VITE_AUTH0_CLIENT_ID=
+VITE_AUTH0_AUDIENCE=
