Add MCP Server for AI Agent Access to Bookmarks API (#5)
## Summary

Implements a Model Context Protocol (MCP) server that wraps the bookmarks API, enabling AI agents (Claude Desktop, Claude Code, etc.) to interact with bookmarks programmatically using Personal Access Tokens for authentication.

## Changes

- Add new `mcp_server` module with FastMCP-based server exposing four tools: `search_bookmarks`, `get_bookmark`, `create_bookmark`, and `list_tags`
- Implement pass-through authentication that extracts Bearer tokens from HTTP headers and forwards them to the existing API
- Add HTTP client helpers for making authenticated requests to the bookmarks API
- Add comprehensive test suite using `respx` for mocking HTTP responses and FastMCP Client for tool integration tests
- Update README with MCP server documentation including setup instructions for Claude Desktop and MCP Inspector
- Add `make mcp-server` target for running the MCP server

## Testing

- Unit tests for API client functions with mocked HTTP responses
- Unit tests for token extraction with mocked headers
- Integration tests for all MCP tools using FastMCP Client
- Tests cover error scenarios: 401 (invalid token), 404 (not found), 409 (duplicate URL), and network errors

## Impact

**New dependencies:**
- `fastmcp>=2.14.1` (runtime)
- `respx>=0.22.0` (dev)

**New environment variables:**
- `MCP_HOST` (default: `0.0.0.0`)
- `MCP_PORT` (default: `8001`)

**Deployment considerations:**
- MCP server runs on port 8001 and requires the main API to be running on port 8000
- No database changes required - MCP is a thin proxy layer

--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,11 @@ CORS_ORIGINS=http://localhost:5173
 # Set to true for local development without Auth0
 VITE_DEV_MODE=false
 
-# API URL for frontend to connect to backend
+# API URL for frontend and MCP server to connect to backend
 VITE_API_URL=http://localhost:8000
+
+# -----------------------------------------------------------------------------
+# MCP Server (Model Context Protocol for AI agents)
+# -----------------------------------------------------------------------------
+MCP_HOST=0.0.0.0
+MCP_PORT=8001
