--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,9 @@
 # Railway Deployment Workflow
 #
 # Deploys all services to Railway on push to main branch.
-# Also runs on manual trigger (workflow_dispatch).
 #
 # Required secrets (set in GitHub repo settings):
 #   RAILWAY_TOKEN - Railway API token (from Railway dashboard -> Account -> Tokens)
-#
-# Required variables (set in GitHub repo settings -> Environments -> production):
-#   RAILWAY_SERVICE_API_ID - Service ID for the API service
-#   RAILWAY_SERVICE_MCP_ID - Service ID for the MCP service
-#   RAILWAY_SERVICE_FRONTEND_ID - Service ID for the Frontend service
 
 name: Deploy to Railway
 
@@ -18,17 +12,11 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      services:
-        description: 'Services to deploy (comma-separated: api,mcp,frontend or "all")'
-        required: false
-        default: 'all'
 
 env:
   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
 jobs:
-  # Run tests before deployment
   test:
     name: Run Tests
     runs-on: ubuntu-latest
@@ -65,78 +53,26 @@ jobs:
       - name: Run frontend lint
         run: cd frontend && npm run lint
 
-  # Deploy API service
-  deploy-api:
-    name: Deploy API
+  deploy:
+    name: Deploy to Railway
     needs: test
     runs-on: ubuntu-latest
-    if: >
-      github.event_name == 'push' ||
-      (github.event_name == 'workflow_dispatch' &&
-       (github.event.inputs.services == 'all' || contains(github.event.inputs.services, 'api')))
-    environment: production
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
-      - name: Deploy API to Railway
-        run: |
-          railway up --service ${{ vars.RAILWAY_SERVICE_API_ID }} --detach
+      - name: Deploy
+        run: railway up --detach
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
-  # Deploy MCP service
-  deploy-mcp:
-    name: Deploy MCP Server
-    needs: test
-    runs-on: ubuntu-latest
-    if: >
-      github.event_name == 'push' ||
-      (github.event_name == 'workflow_dispatch' &&
-       (github.event.inputs.services == 'all' || contains(github.event.inputs.services, 'mcp')))
-    environment: production
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy MCP to Railway
-        run: |
-          railway up --service ${{ vars.RAILWAY_SERVICE_MCP_ID }} --detach
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-  # Deploy Frontend service
-  deploy-frontend:
-    name: Deploy Frontend
-    needs: test
-    runs-on: ubuntu-latest
-    if: >
-      github.event_name == 'push' ||
-      (github.event_name == 'workflow_dispatch' &&
-       (github.event.inputs.services == 'all' || contains(github.event.inputs.services, 'frontend')))
-    environment: production
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Railway CLI
-        run: npm install -g @railway/cli
-
-      - name: Deploy Frontend to Railway
-        run: |
-          railway up --service ${{ vars.RAILWAY_SERVICE_FRONTEND_ID }} --detach
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-  # Run database migrations after API deployment
   migrate:
-    name: Run Database Migrations
-    needs: deploy-api
+    name: Run Migrations
+    needs: deploy
     runs-on: ubuntu-latest
-    environment: production
     steps:
       - uses: actions/checkout@v4
 
@@ -144,7 +80,6 @@ jobs:
         run: npm install -g @railway/cli
 
       - name: Run migrations
-        run: |
-          railway run --service ${{ vars.RAILWAY_SERVICE_API_ID }} -- alembic upgrade head
+        run: railway run -s api -- alembic upgrade head
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
