--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,21 @@ MCP_PORT=8001
 # MCP URL for frontend to display in setup instructions
 # In production, set to your deployed MCP server URL (e.g., https://bookmarks-mcp.up.railway.app)
 VITE_MCP_URL=http://localhost:8001
+
+# -----------------------------------------------------------------------------
+# Security Testing (Optional - for live penetration tests)
+# -----------------------------------------------------------------------------
+# These are only needed to run: make pen_tests
+# Tests are automatically skipped if these are not set (safe for CI/CD).
+#
+# Setup:
+# 1. Create two separate test users in Auth0 Dashboard (User Management -> Users)
+#    - e.g., security-test-a@fake.local, security-test-b@fake.local
+# 2. Log into your app as each user and create a PAT (Personal Access Token)
+# 3. Paste the tokens below
+#
+# IMPORTANT: The two PATs MUST be from DIFFERENT user accounts!
+#
+# SECURITY_TEST_API_URL=https://bookmarks-api.up.railway.app
+# SECURITY_TEST_USER_A_PAT=bm_your_first_user_token
+# SECURITY_TEST_USER_B_PAT=bm_your_second_user_token
