--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "coverage>=7.7.1",
+    "pip-audit>=2.10.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.25.3",
     "pytest-timeout>=2.3.1",
