Cleanup tests and pin 3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "A bookmark management system with tagging and search capabilities."
 readme = "README.md"
 license = {text = "Elastic-2.0"}
-requires-python = ">=3.13"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
