--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,17 +26,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SKIP_CI_TESTS: "true"
-    strategy:
-      matrix:
-        python-version: ['3.12', '3.13']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set Up Python ${{ matrix.python-version }}
+      - name: Set Up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.13'
 
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
