changed consent to backend enforced

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,9 @@ VITE_DEV_MODE=false
 # API URL for frontend and MCP server to connect to backend
 VITE_API_URL=http://localhost:8000
 
+# Frontend URL (used by backend for consent error messages)
+VITE_FRONTEND_URL=http://localhost:5173
+
 # -----------------------------------------------------------------------------
 # MCP Server (Model Context Protocol for AI agents)
 # -----------------------------------------------------------------------------
