--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "bookmarks"
 version = "0.1.0"
 description = "A bookmark management system with tagging and search capabilities."
 readme = "README.md"
-requires-python = ">=3.13"
+license = {text = "Elastic-2.0"}
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
