--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pyjwt>=2.10.1",
+    "pypdf>=6.5.0",
     "python-dotenv>=1.0.1",
     "sqlalchemy[asyncio]>=2.0.45",
     "trafilatura>=2.0.0",
