--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,13 @@ MCP_PORT=8001
 VITE_MCP_URL=http://localhost:8001
 
 # -----------------------------------------------------------------------------
+# Field Length Limits (shared between frontend and backend)
+# -----------------------------------------------------------------------------
+VITE_MAX_CONTENT_LENGTH=512000
+VITE_MAX_DESCRIPTION_LENGTH=2000
+VITE_MAX_TITLE_LENGTH=500
+
+# -----------------------------------------------------------------------------
 # Security Testing (Optional - for live penetration tests)
 # -----------------------------------------------------------------------------
 # These are only needed to run: make pen_tests
