--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,12 +9,14 @@ on:
   push:
     branches:
       - "main"
+      - "staging"
     paths-ignore:
       - 'README.md'
       - 'README_DEPLOY.md'
   pull_request:
     branches:
       - "main"
+      - "staging"
     paths-ignore:
       - 'README.md'
       - 'README_DEPLOY.md'
