--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.11.0",
     "@codemirror/lang-markdown": "^6.5.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.12",
     "@uiw/react-codemirror": "^4.25.4",
