--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "fastapi>=0.124.2",
     "fastmcp>=2.14.1",
     "httpx[http2]>=0.28.1",
+    "jinja2>=3.1.6",
     "lxml>=6.0.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
