Update based on code review

--- a/.env.example
+++ b/.env.example
@@ -40,14 +40,20 @@ VITE_API_URL=http://localhost:8000
 VITE_FRONTEND_URL=http://localhost:5173
 
 # -----------------------------------------------------------------------------
-# MCP Server (Model Context Protocol for AI agents)
+# MCP Servers (Model Context Protocol for AI agents)
 # -----------------------------------------------------------------------------
+# Content MCP Server (bookmarks and notes)
 MCP_HOST=0.0.0.0
 MCP_PORT=8001
 
-# MCP URL for frontend to display in setup instructions
-# In production, set to your deployed MCP server URL (e.g., https://bookmarks-mcp.up.railway.app)
+# Prompt MCP Server
+PROMPT_MCP_HOST=0.0.0.0
+PROMPT_MCP_PORT=8002
+
+# MCP URLs for frontend to display in setup instructions
+# In production, set to your deployed MCP server URLs
 VITE_MCP_URL=http://localhost:8001
+VITE_PROMPT_MCP_URL=http://localhost:8002
 
 # -----------------------------------------------------------------------------
 # Field Length Limits (shared between frontend and backend)
