Fix Dockerfile: include alembic.ini, keep WORKDIR at /app for migrations

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -5,8 +5,8 @@ WORKDIR /app
 # Install uv
 RUN pip install uv
 
-# Copy dependency files and README (required by hatchling)
-COPY pyproject.toml uv.lock README.md ./
+# Copy dependency files, README (required by hatchling), and alembic config
+COPY pyproject.toml uv.lock README.md alembic.ini ./
 
 # Copy backend source
 COPY backend/ ./backend/
@@ -14,11 +14,11 @@ COPY backend/ ./backend/
 # Install dependencies and project
 RUN uv sync --locked --no-dev
 
-# Set working directory for the app
-WORKDIR /app/backend/src
+# WORKDIR stays at /app so alembic can find alembic.ini
+# Pre-deploy command (uv run alembic upgrade head) runs from here
 
 # Default port (Railway sets $PORT)
 EXPOSE 8080
 
-# Run uvicorn - Railway will override port via $PORT env var
-CMD ["sh", "-c", "uv run uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
+# Run uvicorn from backend/src directory
+CMD ["sh", "-c", "cd backend/src && uv run uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
