--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev = [
     "pip>=25.3.0",
     "testcontainers>=4.13.3",
     "respx>=0.22.0",
+    "sik-llms>=0.3.27",
 ]
 
 [tool.hatch.metadata]
