Add AI-friendly content editing API and MCP tools (#61)
## Summary

Implements content-based string replacement editing for bookmarks, notes, and prompts, along with within-content search and partial read capabilities. This enables AI agents to make targeted edits without replacing entire content.

## Changes

- **New API endpoints:**
  - `GET /{bookmarks,notes,prompts}/{id}/search` - Search within content for matches with line numbers and context
  - `PATCH /{bookmarks,notes,prompts}/{id}/str-replace` - String replacement with unique match requirement
  - Partial read support via `start_line`/`end_line` params on GET endpoints

- **Content MCP server updates:**
  - Added `get_content`, `edit_content`, `search_in_content` consolidated tools
  - Removed old `get_bookmark` and `get_note` tools (breaking change)
  - Added `api_patch()` helper

- **Prompt MCP server updates:**
  - Added `update_prompt` tool for content and argument editing
  - Supports atomic content + arguments updates for Jinja2 template variable changes

- **New services:**
  - `content_search_service.py` - Within-content search with context lines
  - `content_edit_service.py` - String replacement with progressive matching (exact → whitespace-normalized)
  - `content_lines.py` - Line counting and extraction utilities

- **New schemas:**
  - `ContentMetadata` for partial read responses
  - `ContentSearchMatch` for search results
  - `StrReplaceRequest/Success` and error schemas


- **Evaluations:** 
  - Add flex-evals integration to test that LLMs can correctly use MCP server tools.
  - Add evals/ directory with pytest-based evaluation infrastructure
  - Add Makefile targets: `make evals` and `make evals-content-mcp`
  - Add flex-evals dependency to pyproject.toml
  - Update README with evaluation usage instructions

## Impact

**Breaking change:** Content MCP server removes `get_bookmark` and `get_note` tools, replaced by unified `get_content` tool with `type` parameter.

No new non-dev dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dev = [
     "pip>=25.3.0",
     "testcontainers>=4.13.3",
     "respx>=0.22.0",
+    "sik-llms>=0.3.28",
+    "flex-evals>=0.3.22",
 ]
 
 [tool.hatch.metadata]
