Optimize MCP tools: name-based lookups, metadata endpoints, and unified search API (#62)
## Summary

Improves both MCP servers (Content and Prompt) with optimized tool naming, metadata-only endpoints for size assessment, and a unified search API. Reduces context window usage by allowing LLMs to check content size before loading full content.

### Changes

- **Content** MCP Server:
  - Consolidated `search_bookmarks`, `search_notes`, `search_all_content` into single `search_items` tool with optional type filter
  - Renamed `get_content` → `get_item` with new `include_content=false` option for metadata-only fetches
  - Added `update_item_metadata` tool for editing title/description/tags without touching content
  - Search results now include `content_length` and `content_preview` (first 500 chars) instead of full content
- Prompt MCP Server:
  - Changed from ID-based to name-based tool APIs (edit_prompt_template, get_prompt_template, update_prompt_metadata)
  - Added `search_prompts` and `list_tags` tools
  - Added `get_prompt_metadata` for lightweight lookups without full template content
  - Renamed response fields: `content_length` → `prompt_length`, `content_preview` → `prompt_preview`
- Backend API:
  - Added `/bookmarks/{id}/metadata`, `/notes/{id}/metadata`, `/prompts/name/{name}/metadata` endpoints
  - Added `PATCH /prompts/name/{name}` and `POST /prompts/name/{name}/str-replace` for name-based updates
  - `BaseEntityService.search()` now returns `content_length` and `content_preview` computed in SQL (excludes full content)
  - New get_metadata() method uses defer() to avoid loading content column
- Cleanup: Removed ai-instructions/ directory (prompts moved to tiddly.me)

## Impact

- **Breaking change for _MCP_ clients**: Tool names changed (e.g., `search_all_content` → `search_items`, `update_prompt` → `edit_prompt_template`)
- **New fields in search responses**: API search endpoints and MCP search tools now include `content_length` and `content_preview` fie

--- a/evals/prompt_mcp/config_edit_prompt_template.yaml
+++ b/evals/prompt_mcp/config_edit_prompt_template.yaml
@@ -1,12 +1,12 @@
 # Prompt MCP Server Evaluation Configuration
-# Tests the update_prompt tool's ability to handle argument changes atomically
+# Tests the edit_prompt_template tool's ability to handle argument changes atomically
 
 model:
   name: "gpt-4.1-mini"
   temperature: 0
 
 eval:
-  samples: 5
+  samples: 10
   success_threshold: 0.8
 
 test_cases:
@@ -30,7 +30,7 @@ test_cases:
           required: true
       instruction: "Remove the language variable from this prompt. The prompt should just say 'Review this code:' without specifying a language."
     expected:
-      tool_name: "update_prompt"
+      tool_name: "edit_prompt_template"
       final_must_contain: "{{ code }}"
       final_must_not_contain: "{{ language }}"
       expected_argument_names: ["code"]
@@ -54,7 +54,7 @@ test_cases:
           required: true
       instruction: "Add an optional 'max_words' variable to control the summary length. REPLACE the line 'Keep the summary concise.' with 'Keep the summary under {{ max_words }} words.'"
     expected:
-      tool_name: "update_prompt"
+      tool_name: "edit_prompt_template"
       final_must_contain: ["{{ article_text }}", "{{ max_words }}"]
       final_must_not_contain: "Keep the summary concise"
       expected_argument_names: ["article_text", "max_words"]
@@ -79,7 +79,7 @@ test_cases:
           required: true
       instruction: "Rename the 'text' variable to 'source_text' for clarity."
     expected:
-      tool_name: "update_prompt"
+      tool_name: "edit_prompt_template"
       final_must_contain: ["{{ target_lang }}", "{{ source_text }}"]
       final_must_not_contain: "{{ text }}"
       expected_argument_names: ["source_text", "target_lang"]
@@ -103,7 +103,7 @@ test_cases:
           required: true
       instruction: "Fix the typo 'Anaylze' - it should be 'Analyze'."
     expected:
-      tool_name: "update_prompt"
+      tool_name: "edit_prompt_template"
       final_must_contain: ["Analyze the following data", "{{ data }}"]
       final_must_not_contain: "Anaylze"
       expected_argument_names: []
@@ -128,7 +128,7 @@ test_cases:
           required: true
       instruction: "Add an optional 'recipient_name' variable. REPLACE 'Write a {{ tone }} email about:' with 'Dear {{ recipient_name }},\n\nWrite a {{ tone }} email about:'"
     expected:
-      tool_name: "update_prompt"
+      tool_name: "edit_prompt_template"
       final_must_contain: ["{{ tone }}", "{{ topic }}", "{{ recipient_name }}"]
       # No exclusion needed - adding a variable doesn't remove existing content
       final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
@@ -157,7 +157,7 @@ test_cases:
           required: true
       instruction: "Remove the 'audience' variable. The prompt should just say 'Create a {{ format }} document about {{ topic }}.' without the audience part."
     expected:
-      tool_name: "update_prompt"
+      tool_name: "edit_prompt_template"
       final_must_contain: ["{{ format }}", "{{ topic }}"]
       final_must_not_contain: "{{ audience }}"
       expected_argument_names: ["format", "topic"]
