Add include_content param and reduce field length limits
Infrastructure changes for skills export feature (Milestone 0).

- Add `include_content` parameter to `BaseEntityService.search()` to optionally load full content instead of deferring it (needed for bulk export)
- Reduce `max_prompt_name_length` from 255 to 100 chars (aligns with Agent Skills spec)
- Reduce `max_description_length` from 2000 to 1000 chars (shared across bookmarks, notes, prompts)
- Add pyyaml dependency for YAML frontmatter generation in skills export
- Remove redundant field length env vars from .env.example (config.py defaults are source of truth)
- Update tests for new limits and add tests verifying content defer/load behavior

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "pypdf>=6.5.0",
     "python-dotenv>=1.0.1",
+    "pyyaml>=6.0.3",
     "redis>=7.1.0",
     "sqlalchemy[asyncio]>=2.0.45",
     "testcontainers[redis]>=4.13.3",
