Add configurable DB pool and performance tooling
Make database connection pool configurable via DB_POOL_SIZE and DB_MAX_OVERFLOW environment variables (defaults: 50/30). This allows tuning for different deployment scenarios and was validated through load testing.

Other changes:
- Fix potential 500 error in /users/me/limits by using get_tier_safely() instead of strict Tier() parsing
- Add performance testing suite: API benchmarks, profiling scripts, and diff-match-patch benchmarks
- Add dev dependencies: pyinstrument (profiling), py-spy (sampling), diff-match-patch (content versioning prep)
- Document tier limit adjustment needed for load testing in performance READMEs
- Condense completed Milestone 0 in content-versioning implementation plan

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "click>=8.1.8",
     "cryptography>=46.0.3",
+    "diff-match-patch>=20241021",
     "fastapi>=0.124.2",
     "fastmcp>=2.14.1",
     "httpx[http2]>=0.28.1",
@@ -43,6 +44,8 @@ dev = [
     "respx>=0.22.0",
     "sik-llms>=0.3.28",
     "flex-evals>=0.3.22",
+    "py-spy>=0.4.1",
+    "pyinstrument>=5.1.2",
 ]
 
 [tool.hatch.metadata]
