--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ POSTGRES_PASSWORD=bookmarks
 POSTGRES_DB=bookmarks
 DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5435/${POSTGRES_DB}
 
+# Connection pool settings (optional, defaults shown)
+# DB_POOL_SIZE=50       # Persistent connections kept open
+# DB_MAX_OVERFLOW=30    # Additional temporary connections for spikes
+# Note: Max connections = pool_size + max_overflow (80 per worker by default)
+# Reduce these if running multiple workers or if your DB has low max_connections
+
 # -----------------------------------------------------------------------------
 # Auth0 (used by both backend and frontend)
 # Get these from: Auth0 Dashboard -> Applications -> Your App -> Settings
