--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@uiw/react-codemirror": "^4.25.4",
     "axios": "^1.13.2",
+    "diff": "^8.0.3",
     "nunjucks": "^3.2.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -45,6 +46,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/diff": "^7.0.2",
     "@types/node": "^24.10.1",
     "@types/nunjucks": "^3.2.6",
     "@types/react": "^19.2.5",
