--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "diff": "^8.0.3",
     "nunjucks": "^3.2.4",
     "react": "^19.2.0",
+    "react-diff-viewer-continued": "^4.1.2",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
