--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,17 @@ POSTGRES_DB=bookmarks
 DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5435/${POSTGRES_DB}
 
 # Connection pool settings (optional, defaults shown)
-# DB_POOL_SIZE=50       # Persistent connections kept open
-# DB_MAX_OVERFLOW=30    # Additional temporary connections for spikes
-# Note: Max connections = pool_size + max_overflow (80 per worker by default)
-# Reduce these if running multiple workers or if your DB has low max_connections
+# See docs/connection-pool-tuning.md for sizing rationale
+# DB_POOL_SIZE=10       # Persistent connections per worker
+# DB_MAX_OVERFLOW=10    # Additional temporary connections per worker
+# DB_POOL_RECYCLE=3600  # Recycle connections older than 1 hour
+# REDIS_POOL_SIZE=5     # Redis connections per worker
+
+# -----------------------------------------------------------------------------
+# Workers
+# -----------------------------------------------------------------------------
+# Number of uvicorn worker processes (used in Dockerfile)
+# API_WORKERS=4         # Set in Railway Variables tab
 
 # -----------------------------------------------------------------------------
 # Auth0 (used by both backend and frontend)
