--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -24,4 +24,4 @@ ENV PYTHONPATH=/app/backend/src
 EXPOSE 8080
 
 # Shell form - no cd needed, PYTHONPATH handles imports
-CMD uv run uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8080}
+CMD uv run uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8080} --workers ${API_WORKERS:-1}
