Add DEV tier for local development
Add a Tier.DEV enum value with effectively unlimited limits (1,000,000) that is resolved at runtime when settings.dev_mode=true. This eliminates the need to manually edit tier_limits.py before running evals, benchmarks, and profiling scripts.

- Add Tier.DEV with high limits to tier_limits.py
- Update get_current_limits() and get_my_limits() to return DEV tier in dev mode
- Update test fixtures (low_limits, low_rate_limits) to patch both FREE and DEV tiers
- Add low_limits fixture to bookmark, input validation, relationship, rate limit, and history tests that enforce limits through the API
- Add tests for DEV tier limits, get_current_limits dev mode branching, and get_my_limits non-dev-mode path
- Remove manual tier limit prerequisite steps from performance docs
- Update MCP server tool descriptions for optimistic locking and edit_prompt_content guidance
- Update eval config model and threshold

--- a/evals/prompt_mcp/config_edit_prompt_content.yaml
+++ b/evals/prompt_mcp/config_edit_prompt_content.yaml
@@ -2,12 +2,12 @@
 # Tests the edit_prompt_content tool's ability to make targeted edits with argument changes
 
 model:
-  name: "gpt-4.1-mini"
+  name: "gpt-5.2"
   temperature: 0
 
 eval:
   samples: 10
-  success_threshold: 0.8
+  success_threshold: 0.7
 
 test_cases:
   # Test 1: Remove a variable from template
