--- a/evals/content_mcp/config_edit_content.yaml
+++ b/evals/content_mcp/config_edit_content.yaml
@@ -1,13 +1,25 @@
 # Content MCP Server Evaluation Configuration
 # Tests the edit_content tool's ability to make precise text replacements
+#
+# TOOL CONTEXT:
+# edit_content: Replaces exact text in the content field via old_str/new_str substitution.
+#   old_str must match exactly one location. Only edits the content body (not title/description/tags).
+# update_item: Updates metadata and/or fully replaces content. Used for metadata changes or
+#   complete rewrites.
+#
+# WHAT THIS EVAL TESTS:
+# Given a note with a typo and the full item + search results, the LLM should use edit_content
+# (not update_item) to make a surgical fix. The eval provides get_item and search_in_content
+# results so the LLM has full context before deciding which tool to use.
 
 model:
-  name: "gpt-4.1-mini"
-  temperature: 0
+  provider: "anthropic"  # "anthropic" or "openai"
+  name: "claude-haiku-4-5"
+  temperature: 0.3
 
 eval:
   samples: 10
-  success_threshold: 0.8
+  success_threshold: 0.6
 
 test_cases:
   # Test 1: Fix typo that is a prefix of another word
@@ -15,18 +27,18 @@ test_cases:
   - id: "fix-typo-prefix-word"
     input:
       content: |
-        This docu needs to be updated.
+        This documnt needs to be updated.
 
         See the documentation for more details.
-      search_query: "docu"
+      search_query: "documnt"
     expected:
       tool_name: "edit_content"
-      old_str_contains: "docu"
+      old_str_contains: "documnt"
       new_str_contains: "document"
       final_must_contain: "This document needs"
       final_must_not_contain: "documentmentation"
     metadata:
-      description: "Fix 'docu' -> 'document' without corrupting 'documentation'"
+      description: "Fix 'documnt' -> 'document' without corrupting 'documentation'"
 
   # Test 2: Fix typo in a code block
   # The LLM must understand markdown context and fix the typo in code
@@ -174,32 +186,7 @@ test_cases:
     metadata:
       description: "Fix 'enpoint' -> 'endpoint' in JSON code block"
 
-  # Test 8: Fix multiline code typo (tests whitespace handling)
-  # The LLM must make a multiline replacement correctly
-  - id: "fix-multiline-code-typo"
-    input:
-      content: |
-        ## Database Query
-
-        ```python
-        def get_users(db):
-            qeury = db.query(User)
-            qeury = qeury.filter(User.active == True)
-            return qeury.all()
-        ```
-
-        This returns all active users.
-      search_query: "qeury"
-    expected:
-      tool_name: "edit_content"
-      old_str_contains: "qeury"
-      new_str_contains: "query"
-      final_must_contain: "query = db.query"
-      final_must_not_contain: "qeury"
-    metadata:
-      description: "Fix 'qeury' -> 'query' (appears multiple times in code block)"
-
-  # Test 9: Fix typo in indented blockquote
+  # Test 8: Fix typo in indented blockquote
   # Tests handling of indented/nested markdown structures
   - id: "fix-typo-in-blockquote"
     input:
