--- a/evals/content_mcp/config_update_item.yaml
+++ b/evals/content_mcp/config_update_item.yaml
@@ -1,6 +1,12 @@
 # Content MCP Server Evaluation Configuration
 # Tests the update_item tool for full content replacement and tags behavior
 #
+# TOOL CONTEXT:
+# update_item: Updates metadata (title, description, tags, url) and/or fully replaces content.
+#   All parameters optional - only provide what you want to change.
+# edit_content: Replaces exact text in the content field via old_str/new_str substitution.
+#   Used for surgical text edits (typos, small changes).
+#
 # CRITICAL BEHAVIORS TESTED:
 # 1. LLM should choose update_item (not edit_content) for substantial rewrites
 # 2. When NOT updating tags: LLM should NOT provide tags parameter
@@ -12,8 +18,9 @@
 # - ["tag1", "tag2"]: Final tags should exactly match (LLM must provide ALL tags)
 
 model:
-  name: "gpt-4.1"
-  temperature: 0
+  provider: "anthropic"  # "anthropic" or "openai"
+  name: "claude-haiku-4-5"
+  temperature: 0.3
 
 eval:
   samples: 10
