Misc: DEV tier, MCP test migration, loading spinners, editor commands, infra (#85)
## Summary

Collection of improvements spanning local dev experience, MCP server infrastructure, test architecture, frontend UX consistency, and editor features.

## Changes

- DEV tier for local development: New Tier.DEV with effectively unlimited limits, resolved at runtime when settings.dev_mode=true. Eliminates manual tier_limits.py editing before running evals/benchmarks/profiling.
- Migrate prompt MCP tests to protocol-level client: All 96 handler tests now go through the actual MCP protocol via fastmcp.Client (matching the content MCP test pattern), plus 12 new tests covering parameter passthrough and network error handling gaps.
- Extract MCP descriptions to external files: Move inline tool descriptions and server instructions into dedicated instructions.md and tools.yaml files. Consolidate shared MCP utilities into shared/mcp_utils.py.
- Consolidate loading spinners: Replace hand-rolled inline spinners with LoadingSpinnerPage component across Bookmark/Note/Prompt/ProtectedRoute pages, fixing spinner position jumping between sequential loading states.
- Add Version History to editor command menu: New "Version History" toggle in the Cmd+/ menu, placed after "Table of Contents" in the Actions section.
- Railway private networking for MCP servers: Route MCP-to-API calls through Railway's private network instead of the public internet.
- Content MCP server health endpoint: Adds GET /health matching the prompt MCP server for consistent production monitoring.
- Command menu z-index fix: Raises EditorCommandMenu from z-50 to z-[60] to render above sidebars.
- Eval provider config: Make eval model provider configurable via YAML; switch from gpt-4.1-mini to claude-haiku-4-5.
- Package updates and linting: Dependency bumps (including fastmcp >=2.14.5) and linting fixes across test files.

## Impact

No breaking changes. DEV tier is runtime-only and only activates when dev_mode=true. MCP

--- a/evals/prompt_mcp/config_edit_prompt_content.yaml
+++ b/evals/prompt_mcp/config_edit_prompt_content.yaml
@@ -1,13 +1,27 @@
 # Prompt MCP Server Evaluation Configuration
 # Tests the edit_prompt_content tool's ability to make targeted edits with argument changes
+#
+# TOOL CONTEXT:
+# edit_prompt_content: Edits template content using old_str/new_str replacement, optionally
+#   updating arguments atomically. old_str must match exactly one location. When the edit changes
+#   template variables ({{ var }}), the arguments parameter must include ALL argument definitions
+#   (full replacement). Omit arguments for text-only changes.
+# update_prompt: Updates metadata (title, description, tags, name) and/or fully replaces template
+#   content. Used for metadata changes or complete rewrites.
+#
+# WHAT THIS EVAL TESTS:
+# Given a prompt template and an instruction to make a targeted change (add/remove/rename a
+# variable, fix a typo), the LLM should use edit_prompt_content (not update_prompt) and
+# correctly coordinate the content edit with the arguments list.
 
 model:
-  name: "gpt-4.1-mini"
-  temperature: 0
+  provider: "anthropic"  # "anthropic" or "openai"
+  name: "claude-haiku-4-5"
+  temperature: 0.3
 
 eval:
   samples: 10
-  success_threshold: 0.8
+  success_threshold: 0.6
 
 test_cases:
   # Test 1: Remove a variable from template
