Update eval infrastructure and add result output
- Bump sik-llms to 0.3.30 and flex-evals to 0.3.24
- Add output_dir and metadata (model provider/name) to all eval test decorators so results persist as JSON files
- Switch get_tool_prediction to use tool_predictions list API instead of singular tool_prediction with try/except
- Fix config_update_item assertion to match on "cach" prefix instead of "cache" to accept both "cache" and "caching"
- Add initial eval result JSON files for content_mcp and prompt_mcp runs
- Add *.tsbuildinfo to viewer .gitignore

--- a/evals/content_mcp/config_update_item.yaml
+++ b/evals/content_mcp/config_update_item.yaml
@@ -140,7 +140,7 @@ test_cases:
       instruction: "Rewrite this as a beginner-friendly guide explaining what Redis caching is and why we use it. Avoid jargon - explain concepts simply. Write in a friendly, educational tone."
     expected:
       tool_name: "update_item"
-      final_must_contain: ["Redis", "cache"]
+      final_must_contain: ["Redis", "cach"]
       final_must_not_contain: ["TTL-based expiry", "write-through", "msgpack"]
     metadata:
       description: "Complete tone change from technical to beginner - requires update_item"
