Update evals to use tool_predictions list
Adapt eval harness to sik-llms 0.3.30 which returns tool_predictions
(list) instead of tool_prediction (single).

- Rename get_tool_prediction to get_tool_predictions, return raw list
- Callers handle 0/multiple predictions gracefully: skip execution but preserve full predictions list in output for debuggability
- Update YAML check JSONPaths to reference tool_predictions[0]
- Fix "cache" → "cach" in update_item eval to match both cache/caching
- Misc: compact viewer header/filters, make table rows clickable

--- a/evals/content_mcp/config_edit_content.yaml
+++ b/evals/content_mcp/config_edit_content.yaml
@@ -215,19 +215,19 @@ checks:
   # Verify correct tool was selected
   - type: "exact_match"
     arguments:
-      actual: "$.output.value.tool_prediction.tool_name"
+      actual: "$.output.value.tool_predictions[0].tool_name"
       expected: "$.test_case.expected.tool_name"
 
   # Verify old_str contains the typo
   - type: "contains"
     arguments:
-      text: "$.output.value.tool_prediction.arguments.old_str"
+      text: "$.output.value.tool_predictions[0].arguments.old_str"
       phrases: "$.test_case.expected.old_str_contains"
 
   # Verify new_str contains the fix
   - type: "contains"
     arguments:
-      text: "$.output.value.tool_prediction.arguments.new_str"
+      text: "$.output.value.tool_predictions[0].arguments.new_str"
       phrases: "$.test_case.expected.new_str_contains"
 
   # Verify final content contains the fix
