--- a/evals/prompt_mcp/config_edit_prompt_content.yaml
+++ b/evals/prompt_mcp/config_edit_prompt_content.yaml
@@ -182,7 +182,7 @@ checks:
   # Verify correct tool was selected
   - type: "exact_match"
     arguments:
-      actual: "$.output.value.tool_prediction.tool_name"
+      actual: "$.output.value.tool_predictions[0].tool_name"
       expected: "$.test_case.expected.tool_name"
 
   # Verify final content contains expected text
